# vectorizer

./: README.md
live/: CMakeLists.txt  video.cpp
test/cmaketest/: CMakeCache.txt  Makefile  cmake_install.cmake
test/raspitest/: CMakeLists.txt  simpletest_raspicam_cv.cpp
